kustomize/overlays/openshift-ai/computate.org/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: computateorg
  labels:
    app.kubernetes.io/instance: computateorg
    app.kubernetes.io/name: computateorg
    deployment: computateorg
    app: computateorg
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: computateorg
      app.kubernetes.io/name: computateorg
      deployment: computateorg
      app: computateorg
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: computateorg
        app.kubernetes.io/name: computateorg
        deployment: computateorg
        app: computateorg
    spec:
      containers:
        - name: computateorg
          image: 'quay.io/computateorg/computate.org:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 10200
              name: http
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 'http'
            timeoutSeconds: 10
            failureThreshold: 10
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 'http'
            timeoutSeconds: 10
            failureThreshold: 10
          resources:
            requests:
              cpu: '100m'
              memory: '100Mi'
            limits:
              cpu: '1'
              memory: '500Mi'
